[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Menu/creditos.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Credits.gd" type="Script" id=2]
[ext_resource path="res://Assets/Menu/back_boton.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "backboton_anim"
length = 0.25
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="Credits" type="Node2D"]
script = ExtResource( 2 )

[node name="Creditos" type="Sprite" parent="."]
position = Vector2( 509.5, 302 )
scale = Vector2( 0.565, 0.565 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 40.0
margin_top = 23.0
margin_right = 131.0
margin_bottom = 75.0
text = "BACK"

[node name="back_boton" type="Sprite" parent="."]
position = Vector2( 85, 51 )
scale = Vector2( 0.164, 0.164 )
texture = ExtResource( 3 )
hframes = 3
vframes = 2

[node name="backboton_anim" type="AnimationPlayer" parent="back_boton"]
anims/RESET = SubResource( 1 )
anims/backboton_anim = SubResource( 2 )

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="animation_finished" from="back_boton/backboton_anim" to="." method="_on_backboton_anim_animation_finished"]
